# TrajOptKP

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  MUJOCO_LOG.TXT  Makefile  README.md  acrobot_testingData.csv  box_sweep_testingData.csv  cmake_install.cmake  doublePendulum_testingData.csv  genTestingData.bash  generalConfig.yaml  l_x.csv  l_x_fd.csv  l_xx_fd.csv  main.cpp  package.xml  panda_box_flick_heavy_clutter_testingData.csv  panda_box_flick_low_clutter_testingData.csv  panda_box_flick_testingData.csv  panda_pushing_clutter_testingData.csv  panda_pushing_heavy_clutter_testingData.csv  panda_pushing_testingData.csv  panda_reaching_testingData.csv  pendulumConfig.yaml  physicsSimSwitching  push_hCl_testingData.csv  push_mCl_testingData.csv  push_nCl_testingData.csv  pushingConfig.yaml  reachingConfig.yaml  reaching_testingData.csv  run.bash  testing.bash  walker_SI10.csv  walker_SI10_testingData.csv  walker_SI20_testingData.csv  (+11 more)
.github/workflows/: build-and-test.yml
PaperData/SCVX_Data/: composeTestingData.py  data.csv
PaperData/iLQR_Python_Data/: display_data.py
PaperData/scripts/: plot_iLQR_keypoint_results.py
TaskConfigs/free_motion/: reaching.yaml
TaskConfigs/locomotion/: hopper.yaml  humanoid.yaml  run_plane.yaml  walk_plane.yaml  walk_uneven.yaml
TaskConfigs/rigid_body_manipulation/: Sweep_multiple.yaml  box_sweep.yaml  place_single.yaml  spherePush.yaml  twoD_push_heavy_clutter.yaml  twoD_push_light_clutter.yaml  twoD_push_no_clutter.yaml  twoD_push_real_world.yaml
TaskConfigs/soft_body_manipulation/: push_soft.yaml  push_soft_into_rigid.yaml
TaskConfigs/toys/: acrobot.yaml  floating_cube.yaml  piston_box.yaml
TestTasks/acrobot/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
TestTasks/box_sweep/: 0.csv  1.csv  10.csv  101.csv  102.csv  103.csv  104.csv  106.csv  108.csv  109.csv  11.csv  110.csv  113.csv  116.csv  117.csv  118.csv  12.csv  120.csv  122.csv  125.csv  126.csv  127.csv  129.csv  13.csv  130.csv  132.csv  136.csv  137.csv  138.csv  139.csv  14.csv  140.csv  142.csv  146.csv  147.csv  149.csv  15.csv  150.csv  151.csv  153.csv  (+114 more)
TestTasks/double_pendulum/: 10.csv  11.csv  14.csv  19.csv  21.csv  24.csv  25.csv  27.csv  29.csv  3.csv  33.csv  34.csv  35.csv  41.csv  44.csv  48.csv  51.csv  52.csv  53.csv  54.csv  55.csv  60.csv  61.csv  62.csv  63.csv  65.csv  67.csv  70.csv  74.csv  76.csv  79.csv  8.csv  83.csv  9.csv  90.csv  91.csv  98.csv
TestTasks/panda_box_flick/: 0.csv  13.csv  16.csv  17.csv  18.csv  19.csv  2.csv  28.csv  3.csv  33.csv  34.csv  35.csv  36.csv  38.csv  39.csv  41.csv  (+31 more)
atomic_configure/: local_setup.sh  setup.sh
catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
devel/: .catkin  .rosinstall
differentiator/: differentiator.cpp  differentiator.h
generalConfigs/: BoxSweep.yaml  PandaMove.yaml  PushClutter.yaml  WalkerMPC.yaml  default.yaml  gen_testing_data.yaml  gen_testing_data_walker.yaml
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: Acrobot.h  BoxFlick.h  BoxSweep.h  Differentiator.h  DoublePendulum.h  FileHandler.h  GenTestingData.h  GradDescent.h  Hopper.h  KeyPointGenerator.h  KeypointGenerator.h  ModelTranslator.h  MuJoCoHelper.h  Optimiser.h  Pentabot.h  PhysicsSimulator.h  PistonBlock.h  PredictiveSampling.h  PushBaseClass.h  Reaching.h  StdInclude.h  Testing.h  ThreeDPushing.h  TwoDPushing.h  Visualiser.h  Walker.h  acrobot.h  boxFlick.h  boxSweep.h  differentiator.h  doublePendulum.h  fileHandler.h  gradDescent.h  hopper.h  humanoid.h  iLQR.h  interpolated_iLQR.h  locomotion.h  modelTranslator.h  optimiser.h  (+9 more)
launch/: optimise.launch
modelTranslator/: doublePendulum.cpp  doublePendulum.h  modelTranslator.cpp  modelTranslator.h  reaching.cpp  reaching.h
optimiser/: interpolated_iLQR.cpp  interpolated_iLQR.h  optimiser.cpp  optimiser.h
optimiserConfigs/: gradDescent.yaml  iLQR.yaml  stomp.yaml
physicsSimulators/: MuJoCoHelper.cpp  MuJoCoHelper.h  bulletHelper.cpp  bulletHelper.h  physicsSimulator.cpp  physicsSimulator.h
src/: Derivs_Test.cpp  GenTestingData.cpp  Testing.cpp  main.cpp
src/tests/: 3D_test_class.h  CMakeLists.txt  Derivs_Test.cpp  Keypoints_Test.cpp  ModelTranslator_Test.cpp  test_acrobot.h  test_humanoid.h
src/tests/test_configs/: acrobot.yaml  humanoid.yaml  threeDPushTest.yaml
src/tests/test_xml/: Franka_and_cuboid.xml  sphere_push.xml
src/tests/test_xml/Acrobot/: acrobot.xml
src/tests/test_xml/Acrobot/common/: skybox.xml
src/tests/test_xml/assets/: actuator0.xml  assets.xml  basic_scene.xml  chain0.xml  gripper_assets.xml
src/tests/test_xml/humanoid/: humanoid.xml
stdInclude/: stdInclude.cpp  stdInclude.h
taskConfigs/: acrobotConfig.yaml  boxFlick.yaml  boxFlickConfig.yaml  boxFlickHeavyClutterConfig.yaml  boxFlickLowClutterConfig.yaml  boxSweep.yaml  doublePendulumConfig.yaml  hopperConfig.yaml  locomotionConfig.yaml  locomotionUnevenConfig.yaml  pendulumConfig.yaml  pentabot_config.yaml  piston_box_config.yaml  pushThreeDConfig.yaml  reachingConfig.yaml  run_plane_config.yaml  spherePush.yaml  squish_soft.yaml  twoDPushingClutterConfig.yaml  twoDPushingConfig.yaml  twoDPushingConstrainedClutterConfig.yaml  twoDPushingHeavyClutterConfig.yaml  twoDPushingLowClutterConfig.yaml  twoDPushingRealWorldConfig.yaml  walk_plane_config.yaml  walk_uneven_config.yaml
testTasks/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
visualizer/: visualizer.cpp  visualizer.h
(+20428 files in other folders)
